# GateSyntax-Hermes-UI

./: .gitignore  CLAUDE.md.ots  README.md  README.md.ots  SPEC.md.ots  _zenodo_upload.py
GateSyntax/: README.md
GateSyntax-CSharp/: App.xaml  App.xaml.cs  GateSyntax.Runtime.csproj  GateSyntax.csproj  GateSyntax.sln  GateSyntaxBuilder.cs  LICENSE.txt  README.md
GateSyntax-CSharp/Resources/: Theme.xaml
GateSyntax-CSharp/Runtime/: ExpressionEvaluator.cs  GaugeControl.cs  LiveBinding.cs  PersistenceService.cs  StateStore.cs  SyntaxNode.cs  SyntaxParser.cs  UIRuntime.cs
GateSyntax-CSharp/UI/: animations.ui  binding.ui  commands.ui  controls.ui  custom.ui  dialogs.ui  documents.ui  graphics.ui  input.ui  layouts.ui  main.ui  styles.ui  threed.ui
GateSyntax/csharp/: GateSyntaxIntegrador.cs  GateSyntaxIntegrador.csproj
GateSyntax/java/: pom.xml
GateSyntax/javascript/: index.js  package.json
GateSyntax/python/: pyproject.toml
GateSyntax/python/gatesyntax_integrador/: __init__.py  integrador.py
GateSyntax/react/: package.json  tsconfig.json
GateSyntax/typescript/: package.json  tsconfig.json
GateSyntaxJava/: README.md  pom.xml
GateSyntaxJava/UI/: controls.ui  main.ui
GateSyntaxJava/resources/: theme.css
GateSyntaxPy/: README.md  gatesyntax_builder.py  main.py  run.py
GateSyntaxPy-Qt/: README.md  gatesyntax_builder.py  main.py  requirements.txt  run.py
GateSyntaxPy-Qt/UI/: binding.ui  (+4 more)
GateSyntaxTS/: README.md  SPEC.md  index.html  package-lock.json  package.json
GateSyntaxWebb/: CLAUDE.md  README.md  index.html  package-lock.json  package.json
(+60 files in other folders)
