[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "gatesyntax-integrador"
version     = "1.0.0"
description = "Domain-agnostic live-binding integrador for GateSyntax"
readme      = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
qt      = ["PyQt5>=5.15"]
qt6     = ["PyQt6>=6.0"]
textual = ["textual>=0.52", "rich>=13"]

[project.urls]
Repository = "https://github.com/your-org/gatesyntax"

[tool.setuptools.packages.find]
where = ["."]
include = ["gatesyntax_integrador*"]
